2009-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c:
   Fix wrong creation of filetype template menu items for custom
   filetypes.
 * src/highlighting.c:
   Use jscript_keyword for SCE_HB[A]_WORD markup styles.


2009-09-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/symbols.c:
   Add missing icon for Java packages in the Symbol List.


2009-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, data/filetypes.vala:
   Add Vala keywords to conf file.
 * src/templates.c, doc/geany.txt, doc/geany.html:
   Read custom file templates from $prefix/share/geany/templates/files as
   well as user dir.
 * src/templates.c, data/templates, data/templates/files,
   data/templates/files/file.rb, data/templates/files/file.html,
   data/templates/files/main.java, data/templates/files/main.c,
   data/templates/files/main.cxx, data/templates/files/file.php,
   data/templates/files/main.d, data/templates/files/program.pas,
   data/templates/files/main.py, data/templates/files/file.tex,
   wscript, Makefile.am:
   Move filetype template defaults into custom file template files.


2009-09-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/symbols.c, tagmanager/perl.c:
   Change Perl tag parser to ctags SVN r601. This removes support for
   buggy local/my/our but it parses constant/format/labels and should
   be less buggy overall (closes #2861232).
 * src/templates.c, src/utils.c, src/utils.h, src/symbols.c:
   Add utils_get_file_list_full() which can optionally sort or include
   a full path for each list item.
 * src/utils.c, src/plugindata.h, src/plugins.c:
   Add utils_get_file_list_full() to API.


2009-09-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/sidebar.c, src/sidebar.h,
   src/makefile.win32, src/project.c, src/prefs.c, src/treeviews.c,
   src/callbacks.c, src/notebook.c, src/treeviews.h, src/document.c,